<resources>
    <string name="app_name">AuthorPoint</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="authorpointTitle">AuthorPoint</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="search_button_name">search</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_books">No books found.</string>
    <string name="search_view_hint">Enter a book title</string>
    <string name="search_hint">Enter a title</string>
</resources>
