<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="16dp"
    tools:context=".Login">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/authorpointTitle"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_back"
        android:textColor="#000"
        android:textSize="32sp"
        android:fontFamily="sans-serif-medium"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_above="@+id/userEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"

        android:src="@drawable/bk" />

    <requestFocus/>

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userPwd"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_email"
        android:hint="@string/emailHint"
        android:drawableStart="@drawable/email"
        android:drawablePadding="20dp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="#000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/userPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginBtn"
        android:drawableStart="@drawable/pwd"
        android:drawablePadding="20dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/bg_pwd"
        android:hint="@string/passwordHint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="#000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/RegBtn"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textColor="#000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/RegBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register"
        android:textColor="#000"
        android:textSize="16sp" />

</RelativeLayout>